fix: bug on home page layout grid (gap)

--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -13,6 +13,6 @@
 
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 6.25; /* 100px */
+  gap: 6.25rem; /* 100px */
   align-content: center;
 }
